[package]
name = "rscan"
version = "0.1.0"
edition = "2021"
description = "A fast, modular and portable network infrastructure enumeration tool."
authors = ["Kidan Nelson <nelsonkidan@gmail.com>"]
repository = "https://github.com/N4D1K-lgtm/rscan"

[dependencies]
rscan_core = { path = "crates/rscan-core" }
rscan_derive = { path = "crates/rscan-derive" }
prettytable = "0.10.0"
inventory = "0.3.15"
tokio = { version = "1.33.0", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
inquire = "0.6.2"
tui = "0.19.0"
crossterm = "0.27.0"
rscan_ui = { path = "crates/rscan-ui" }

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kidan Nelson <nelsonkidan@gmail.com>"]
repository = "https://github.com/N4D1K-lgtm/rscan"
documentation = "https://docs.rs/rscan"

[workspace.dependencies]
enum_dispatch = "0.3.12"
inventory = "0.3.15"
prettytable = "0.10.0"
tokio = { version = "1.35.1", features = ["full"] }
colored = "2.0.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.56"
futures = "0.3.30"
tui = "0.19.0"
strum = "0.26.1"
strum_macros = "0.26.1"
crossterm = "0.27.0"
