[package]
name = "rscan"
version = "0.1.0"
edition = "2021"
description = "A fast, modular and portable network infrastructure enumeration tool."
authors = ["Kidan Nelson <nelsonkidan@gmail.com>"]
repository = "https://github.com/N4D1K-lgtm/rscan"
build = "build.rs"

[dependencies]
async-trait = "0.1.77"
better-panic = "0.3.0"
clap = { version = "4.4.5", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
inventory = "0.3.15"
futures = "0.3.30"
human-panic = "1.2.3"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.106"
log = "0.4.20"
ratatui = "0.26.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.113"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }

rscan_ui = { path = "crates/rscan-ui" }
rscan_core = { path = "crates/rscan-core" }
rscan_derive = { path = "crates/rscan-derive" }

[dev-dependencies]
pretty_assertions = "1.4.0"

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "git", "gitoxide", "cargo"] }

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kidan Nelson <nelsonkidan@gmail.com>"]
repository = "https://github.com/N4D1K-lgtm/rscan"
documentation = "https://docs.rs/rscan"

[workspace.dependencies]
async-trait = "0.1.77"
better-panic = "0.3.0"
clap = { version = "4.4.5", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
inventory = "0.3.15"
futures = "0.3.30"
human-panic = "1.2.3"
lazy_static = "1.4.0"
libc = "0.2.106"
log = "0.4.20"
ratatui = "0.26.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.113"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
