[package]
name = "rscan_core"
description = "The core library of rscan"
edition.workspace = true
authors.workspace = true
version.workspace = true
documentation.workspace = true


[dependencies]
clap = { workspace = true }
inventory = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
