[package]
name = "rscan_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.48", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.78"

inventory = { workspace = true }

rscan_core = { path = "../rscan-core" }
